sterlang/examples/pattern_error/src/inexhaustive_enum2.erlt
%% Copyright (c) Facebook, Inc. and its affiliates.
%%
%% Licensed under the Apache License, Version 2.0 (the "License");
%% you may not use this file except in compliance with the License.
%% You may obtain a copy of the License at
%%
%%     http://www.apache.org/licenses/LICENSE-2.0
%%
%% Unless required by applicable law or agreed to in writing, software
%% distributed under the License is distributed on an "AS IS" BASIS,
%% WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
%% See the License for the specific language governing permissions and
%% limitations under the License.

-module(inexhaustive_enum2).
-export([test1/1, test2/1]).
-export_type([bool_box1/0, bool_box2/0]).
-enum bool_box1() :: (box{boolean()}).
-enum bool_box2() :: (box{boolean(), boolean()}).

test1(bool_box1.box{false}) -> {}.

test2(bool_box2.box{_, false}) -> {}.

-spec test1(bool_box1()) -> {}.
-spec test2(bool_box2()) -> {}.
